--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,15 +1,13 @@
 version: 0.2
 
 phases:
-  pre_build:
+  install:
     commands:
+      - npm install next -g
       - npm install
   build:
     commands:
       - npm run build
-
 artifacts:
   files:
-    - '**/*'
-  discard-paths: no
-  base-directory: ./
+    - "**/*"
